# otica

./: CITATION.cff  README.md  demo.py  pyproject.toml  run-all.py  wrong_rot.py
.github/worflows/: pages.yml
.github/workflows/: lint.yml  pages.yml  test.yml
docs/source/: conf.py  index.rst  model.rst  modules.rst  utils.rst
otica/: __init__.py  _base.py  _lbfgs.py  _utils.py
otica/model/: __init__.py  _base.py  _lbfgs.py
otica/otica/: __init__.py
otica/otica/utils/: __init__.py  _metrics.py
otica/utils/: _metrics.py
scripts/: _utils.py  criterion-rotation.py  requirements.txt  runtime-scaling.py  statistical-performance.py  utils.py
tests/: __init__.py  test_otica.py  test_utils.py
